--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,104 +1,118 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
+<head> 
     <title>Superfeedr : {{ page.title }} </title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <link href="http://superfeedr.com/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/css/blog.css" />
-    <script src="http://superfeedr.com/javascripts/shjs-0.6/sh_main.min.js" type="text/javascript"></script>
-    <script src="http://superfeedr.com/javascripts/shjs-0.6/lang/sh_css.js" type="text/javascript"></script>
-    <script src="http://superfeedr.com/javascripts/shjs-0.6/lang/sh_html.min.js" type="text/javascript"></script>
-    <script src="http://superfeedr.com/javascripts/shjs-0.6/lang/sh_xml.min.js" type="text/javascript"></script>
-    <script src="http://superfeedr.com/javascripts/shjs-0.6/lang/sh_ruby.min.js" type="text/javascript"></script>
-    <link href="http://blog.superfeedr.com/atom.xml" type="application/atom+xml" rel="alternate" title="Superfeedr' thoughts" />
-</head>
-<body>
-    <div id="navigation">
-        <div>
-            <a href="http://superfeedr.com/" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr.png" /> Superfeedr</a>
-            <a href="http://superfeedr.com/documentation">Docs</a>
-            <a href="http://superfeedr.com/about">About</a>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" /> 
+    
+    <!-- Stylesheets --> 
+    <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.local/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.local/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.local/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.local/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <!--[if lt IE 8]>
+		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js">IE7_PNG_SUFFIX=".png";</script>
+		<link rel="stylesheet" type="text/css" href="css/ie.css" />
+	<![endif]--> 
+	<!--[if IE 6]>
+		<link rel="stylesheet" type="text/css" href="css/ie6.css" />
+	<![endif]--> 
+</head> 
+ 
+<body> 
+	<div id="bg"> 
+	<div id="wrapper"> 
+		<div id="logo"> 
+			<h1><a href="/" class="home"><img alt="Superfeedr" src="http://superfeedr.local/images/superfeedr.png" /></a></h1> 
+		</div> 
+		<div id="login_button"> 
+		    <a href="#">Log in</a> 
+		</div> 
+		<ul id="navigation"> 
+		    <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li> 
+		    <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li> 
+		    <li><a href="http://superfeedr.com/documentation" alt="RTFM">Documentation</a></li> 
+		    <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li> 
+		</ul> 
+		<div class="clear"></div> 
+	<div id="main_bg"> 
+        <div id="main_top"> 
+			<h2>The Blog</h2> 
+		</div> <!--main_top--> 
+ 
+    		<div id="content"> 
+<div id="content_left"> 
+    {{ content }}
+	</div> <!--content_left--> 
+ 
+	<div id="content_right"> 
+        <h2>Superfeedr speaking</h2>
+        <form action="http://www.feedmyinbox.com/feeds/verify/" method="post" id="fmi" target="fmi" onsubmit="window.open('http://www.feedmyinbox.com/', 'fmi', 'scrollbars=yes,width=520,height=490');return true;">
+            <input type="hidden" value="http://blog.superfeedr.com/atom.xml" name="feed"/>
+            <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. Susbcribe to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, read the <a href="/archive.html">archive</a> or receive emails at <input type="text" value="" name="email" />    <input type="submit" value="Submit"/>
+            </p>
+        </form>
+
+        <div id="facebook_div">
+            <script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script type="text/javascript">FB.init("dfb41a1fd39d0fdac38081c0dd771c32");</script><fb:fan profile_id="205234549391" stream="" connections="" width="300"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Superfeedr/205234549391">Superfeedr on Facebook</a> </div>
         </div>
-    </div>
-    <div id="user-navigation">
-        <div>&nbsp;</div>
-    </div>
-
-    <div id="page">
-        <div id="sidebar">
-            <h2>Superfeedr speaking</h2>
-            <form action="http://www.feedmyinbox.com/feeds/verify/" method="post" id="fmi" target="fmi" onsubmit="window.open('http://www.feedmyinbox.com/', 'fmi', 'scrollbars=yes,width=520,height=490');return true;">
-                <input type="hidden" value="http://blog.superfeedr.com/atom.xml" name="feed"/>
-                <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. Susbcribe to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, read the <a href="/archive.html">archive</a> or receive emails at <input type="text" value="" name="email" />    <input type="submit" value="Submit"/>
-                </p>
-            </form>
-
-            <div id="facebook_div">
-                <script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script type="text/javascript">FB.init("dfb41a1fd39d0fdac38081c0dd771c32");</script><fb:fan profile_id="205234549391" stream="" connections="" width="300"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Superfeedr/205234549391">Superfeedr on Facebook</a> </div>
-            </div>
 
 
 
-            <div id="dsq-recentcomments" class="dsq-widget"><h2 class="dsq-widget-title">Recent Comments</h2><script type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/recent_comments_widget.js?num_items=5&avatar_size=32"></script></div><a href="http://disqus.com">Powered by Disqus</a>
+        <div id="dsq-recentcomments" class="dsq-widget"><h2 class="dsq-widget-title">Recent Comments</h2><script type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/recent_comments_widget.js?num_items=5&avatar_size=32"></script></div><a href="http://disqus.com">Powered by Disqus</a>
 
-            <div id="twitter_div">
-                <h2>Twitter Updates</h2>
-                <ul id="twitter_update_list"></ul>
-                <a href="http://twitter.com/superfeedr" id="twitter-link" style="display:block;text-align:right;">follow me on Twitter</a>
-            </div>
-
+        <div id="twitter_div">
+            <h2>Twitter Updates</h2>
+            <ul id="twitter_update_list"></ul>
+            <a href="http://twitter.com/superfeedr" id="twitter-link" style="display:block;text-align:right;">follow me on Twitter</a>
         </div>
-        <div id="main">
-            {{ content }}
-        </div>
-
-        <div id="bottom">
-            <a href="http://superfeedr.com">Home</a> |
-            <a href="http://superfeedr.com/documentation">Documentation</a> |
-            <a href="http://groups.google.com/group/superfeedr/web/frequently-asked-questions">Faq</a> |
-            <a href="http://groups.google.com/group/superfeedr">Community</a> |
-            <a href="http://superfeedr.com/about">About</a>
-        </div>
-    </div>
-
-    <script>
-    sh_highlightDocument();
-    </script>
-
-    <!-- Google Analytics Code -->
-    <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-    <!--//--><![CDATA[//><!--
-    var pageTracker = _gat._getTracker('UA-9285763-1');
-    pageTracker._setDomainName("superfeedr.com");
-    pageTracker._initData();
-    pageTracker._trackPageview();
-    //--><!]]>
-    </script>
-
-    <!-- Twitter Badge Code -->
-    <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-    <script type="text/javascript" src="http://twitter.com/statuses/user_timeline/superfeedr.json?callback=twitterCallback2&amp;count=5"></script>    
-
-    <script type="text/javascript">
-    //<![CDATA[
-    (function() {
-        var links = document.getElementsByTagName('a');
-        var query = '?';
-        for(var i = 0; i < links.length; i++) {
-            if(links[i].href.indexOf('#disqus_thread') >= 0) {
-                query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
-            }
-        }
-        document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/get_num_replies.js' + query + '"></' + 'script>');
-        })();
-        //]]>
-    </script>
-</body>
-</html>
-
+</div>  
+ 
+            <div class="clear"></div> 
+            </div> <!--content--> 
+            
+	    <div id="footer"> 
+	        <ul id="footer_navigation"> 
+	            <li><a href="/">Home</a></li> 
+                <li><a href="/documentation">Documentation</a></li> 
+                <li><a href="http://groups.google.com/group/superfeedr/web/frequently-asked-questions">Faq</a></li> 
+                <li><a href="http://groups.google.com/group/superfeedr">Community</a></li> 
+                <li><a href="http://github.com/superfeedr">Wrappers and Code</a></li> 
+                <li><a href="http://blog.superfeedr.com">Blog</a></li> 
+                <li><a href="/about">About &amp; Contact</a></li> 
+			</ul> 
+		</div> 
+		<div id="log" style="" ></div> 
+	</div> <!--main_bg--> 
+	</div><!--wrapper--> 
+	</div><!--bg--> 
+	<!-- UserVoice --> 
+    <script type="text/javascript"> 
+    var uservoiceOptions = {
+      /* required */
+      key: 'superfeedr',
+      host: 'superfeedr.uservoice.com', 
+      forum: '17481',
+      showTab: true,  
+      /* optional */
+      alignment: 'left',
+      background_color:'#f00', 
+      text_color: 'white',
+      hover_color: '#06C',
+      lang: 'en'
+    };
+ 
+    function _loadUserVoice() {
+      var s = document.createElement('script');
+      s.setAttribute('type', 'text/javascript');
+      s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");
+      document.getElementsByTagName('head')[0].appendChild(s);
+    }
+    _loadSuper = window.onload;
+    window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); };
+    </script> 
+    <!-- UserVoice (end) --> 
+</body> 
+</html> 
