--- a/css/blog.css
+++ b/css/blog.css
@@ -1,38 +1,25 @@
-#main {
-/*    float:left;
-*/    width: 550px;
-}
-
-#page .banner h1 a {
-  text-decoration:none;
-  color:black;
-}
-
-#main h3 {
+#content h3 {
   margin-top: 30px;
 }
 
-#main h3 a {
+#content h3 a {
   text-decoration:none;
   color:black;
 }
 
-#sidebar {
-    font-size: 0.9em;
-    float:right;
-    width: 30%;
+#content_right h2 {
+  font-size: 1.5em;
 }
 
-#sidebar ul {
+#content_left ul {
     padding-left:15px;
 }
 
-#sidebar li {
+#content_left li {
     margin-left: 0px;
     padding-left: 0px;
     margin-bottom: 5px;
 }
-
 
 #license {
     clear:both;
