pointing to superfeedr.com, no superfeedr.local

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
     
     <!-- Stylesheets --> 
     <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" /> 
-    <link href="http://superfeedr.local/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" /> 
-    <link href="http://superfeedr.local/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> 
-    <link href="http://superfeedr.local/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" /> 
-    <link href="http://superfeedr.local/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.com/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.com/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" /> 
     <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" /> 
     <!--[if lt IE 8]>
 		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js">IE7_PNG_SUFFIX=".png";</script>
@@ -25,7 +25,7 @@
 	<div id="bg"> 
 	<div id="wrapper"> 
 		<div id="logo"> 
-			<h1><a href="/" class="home"><img alt="Superfeedr" src="http://superfeedr.local/images/superfeedr.png" /></a></h1> 
+			<h1><a href="/" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr.png" /></a></h1> 
 		</div> 
 		<div id="login_button"> 
 		    <a href="#">Log in</a> 
