fixing the layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,7 @@
 	<div id="bg"> 
 	<div id="wrapper"> 
 		<div id="logo"> 
-			<h1><a href="/" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr.png" /></a></h1> 
-		</div> 
-		<div id="login_button"> 
-		    <a href="#">Log in</a> 
+			<h1><a href="/" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a></h1> 
 		</div> 
 		<ul id="navigation"> 
 		    <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li> 
@@ -39,7 +36,7 @@
 		<div class="clear"></div> 
 	<div id="main_bg"> 
         <div id="main_top"> 
-			<h2>The Blog</h2> 
+			<h2>Superfeedr's Blog</h2> 
 		</div> <!--main_top--> 
  
     		<div id="content"> 
