adding a bunch of rel=me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,12 @@
 	</div><!--wrapper--> 
 	</div><!--bg--> 
 	<!-- UserVoice --> 
+	<div style="hidden" id="profile_links">
+	    <a href="http://identi.ca/julien" rel="me" target="_blank">Identica</a>
+	    <a href="http://ouvre-boite.com" rel="me" target="_blank">Ouvre-Boite</a>
+	    <a href="http://ouvre-boite.com" rel="me" target="_blank">Google Buzz</a>
+	    <a href="http://stackoverflow.com/users/73987/julien-genestoux" rel="me" target="_blank">Stack Overflow</a>
+	</div>
     <script type="text/javascript"> 
     var uservoiceOptions = {
       /* required */
