a bit more links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,10 +86,12 @@
 	</div><!--wrapper--> 
 	</div><!--bg--> 
 	<!-- UserVoice --> 
-	<div style="display:none" id="profile_links">
+    <div style="display:none" id="profile_links">
 	    <a href="http://ouvre-boite.com" rel="me" target="_blank">Ouvre-Boite</a>
 	    <a href="http://www.google.com/profiles/julien.genestoux" rel="me" target="_blank">Google Buzz</a>
 	    <a href="http://stackoverflow.com/users/73987/julien-genestoux" rel="me" target="_blank">Stack Overflow</a>
+	    <a href="http://github.com/julien51">Github</a>
+	    <a href="http://friendfeed.com/julien">Friendfeed</a>
 	</div>
     <script type="text/javascript"> 
     var uservoiceOptions = {
