a few more links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,7 @@
 	    <a href="http://stackoverflow.com/users/73987/julien-genestoux" rel="me" target="_blank">Stack Overflow</a>
 	    <a href="http://github.com/julien51">Github</a>
 	    <a href="http://friendfeed.com/julien">Friendfeed</a>
+	    <a href="http://cliqset.com/julien">Cliqset</a>
 	</div>
     <script type="text/javascript"> 
     var uservoiceOptions = {
