fixing some broken relative links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,13 +72,13 @@
             
 	    <div id="footer"> 
 	        <ul id="footer_navigation"> 
-	            <li><a href="/">Home</a></li> 
-                <li><a href="/documentation">Documentation</a></li> 
+	            <li><a href="http://superfeedr.com/">Superfeedr Home</a></li> 
+                <li><a href="http://superfeedr.com/documentation">Documentation</a></li> 
                 <li><a href="http://groups.google.com/group/superfeedr/web/frequently-asked-questions">Faq</a></li> 
                 <li><a href="http://groups.google.com/group/superfeedr">Community</a></li> 
                 <li><a href="http://github.com/superfeedr">Wrappers and Code</a></li> 
                 <li><a href="http://blog.superfeedr.com">Blog</a></li> 
-                <li><a href="/about">About &amp; Contact</a></li> 
+                <li><a href="http://superfeedr.com/about">About &amp; Contact</a></li> 
 			</ul> 
 		</div> 
 		<div id="log" style="" ></div> 
