improving the publishers page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 		<div class="clear"></div> 
 	<div id="main_bg"> 
         <div id="main_top"> 
-			<h2>Superfeedr's Blog</h2> 
+			<h2>{{ page.title }}</h2> 
 		</div> <!--main_top--> 
  
     		<div id="content"> 
