--- a/_layouts/one_column.html
+++ b/_layouts/one_column.html
@@ -12,6 +12,8 @@
     <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" /> 
     <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" /> 
     <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
+    
     <!--[if lt IE 8]>
 		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js">IE7_PNG_SUFFIX=".png";</script>
 		<link rel="stylesheet" type="text/css" href="css/ie.css" />
@@ -34,48 +36,32 @@
 		    <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li> 
 		</ul> 
 		<div class="clear"></div> 
-
- 	<div id="main_bg"> 
-	    
-            <div id="main_top"> 
-    			<h2>PubSubHubbub with benefits</h2> 
-    		</div> <!--main_top--> 
+	<div id="main_bg"> 
+        <div id="main_top"> 
+			<h2>{{ page.title }}</h2> 
+		</div> <!--main_top--> 
  
     		<div id="content"> 
-{{ content }}
+    {{ content }}
+
             <div class="clear"></div> 
             </div> <!--content--> 
-
- 
- 
+            
+	    <div id="footer"> 
+	        <ul id="footer_navigation"> 
+	            <li><a href="http://superfeedr.com/">Superfeedr Home</a></li> 
+                <li><a href="http://superfeedr.com/documentation">Documentation</a></li> 
+                <li><a href="http://groups.google.com/group/superfeedr/web/frequently-asked-questions">Faq</a></li> 
+                <li><a href="http://groups.google.com/group/superfeedr">Community</a></li> 
+                <li><a href="http://github.com/superfeedr">Wrappers and Code</a></li> 
+                <li><a href="http://blog.superfeedr.com">Blog</a></li> 
+                <li><a href="http://superfeedr.com/about">About &amp; Contact</a></li> 
+			</ul> 
+		</div> 
+	</div> <!--main_bg--> 
 	</div><!--wrapper--> 
 	</div><!--bg--> 
 	<!-- UserVoice --> 
-    <script type="text/javascript"> 
-    var uservoiceOptions = {
-      /* required */
-      key: 'superfeedr',
-      host: 'superfeedr.uservoice.com', 
-      forum: '17481',
-      showTab: true,  
-      /* optional */
-      alignment: 'left',
-      background_color:'#f00', 
-      text_color: 'white',
-      hover_color: '#06C',
-      lang: 'en'
-    };
- 
-    function _loadUserVoice() {
-      var s = document.createElement('script');
-      s.setAttribute('type', 'text/javascript');
-      s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");
-      document.getElementsByTagName('head')[0].appendChild(s);
-    }
-    _loadSuper = window.onload;
-    window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); };
-    </script> 
-    <!-- UserVoice (end) --> 
 </body> 
 </html> 
-    
+
