refactored the footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,15 +73,16 @@
             </div> <!--content--> 
             
 	    <div id="footer"> 
-	        <ul id="footer_navigation"> 
-	            <li><a href="http://superfeedr.com/">Superfeedr Home</a></li> 
-                <li><a href="http://superfeedr.com/documentation">Documentation</a></li> 
-                <li><a href="http://groups.google.com/group/superfeedr/web/frequently-asked-questions">Faq</a></li> 
-                <li><a href="http://groups.google.com/group/superfeedr">Community</a></li> 
-                <li><a href="http://github.com/superfeedr">Wrappers and Code</a></li> 
-                <li><a href="http://blog.superfeedr.com">Blog</a></li> 
-                <li><a href="http://superfeedr.com/about">About &amp; Contact</a></li> 
-			</ul> 
+            <ul id="footer_navigation">
+                <li><a href="/documentation">Docs</a></li>
+                <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
+                <li><a href="/cost">Pricing</a></li>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
+                <li><a href="http://github.com/superfeedr">Code</a></li>
+                <li><a href="http://blog.superfeedr.com">Blog</a></li>
+                <li><a href="/about">About</a></li>
+            </ul>
 		</div> 
 		<div id="log" style="" ></div> 
 	</div> <!--main_bg--> 
