--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,14 +74,14 @@
             
 	    <div id="footer"> 
             <ul id="footer_navigation">
-                <li><a href="/documentation">Docs</a></li>
+                <li><a href="http://superfeedr.com/documentation">Docs</a></li>
                 <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
-                <li><a href="/cost">Pricing</a></li>
-                <li><a href="/terms">Terms</a></li>
+                <li><a href="http://superfeedr.com/cost">Pricing</a></li>
+                <li><a href="http://superfeedr.com/terms">Terms</a></li>
                 <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
                 <li><a href="http://github.com/superfeedr">Code</a></li>
                 <li><a href="http://blog.superfeedr.com">Blog</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="http://superfeedr.com/about">About</a></li>
             </ul>
 		</div> 
 		<div id="log" style="" ></div> 
