--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	<div id="bg"> 
 	<div id="wrapper"> 
 		<div id="logo"> 
-			<h1><a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a></h1> 
+			<a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
 		</div> 
 		<ul id="navigation"> 
 		    <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li> 
@@ -38,7 +38,7 @@
 		<div class="clear"></div> 
 	<div id="main_bg"> 
         <div id="main_top"> 
-			<h2>{{ page.title }}</h2> 
+			<h1>{{ page.title }}</h1> 
 		</div> <!--main_top--> 
  
     		<div id="content"> 
