adding the webintents post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,16 +48,28 @@
  
 	<div id="content_right"> 
         <h2>Superfeedr speaking</h2>
-        <form action="http://www.feedmyinbox.com/feeds/verify/" method="post" id="fmi" target="fmi" onsubmit="window.open('http://www.feedmyinbox.com/', 'fmi', 'scrollbars=yes,width=520,height=490');return true;">
-            <input type="hidden" value="http://blog.superfeedr.com/atom.xml" name="feed"/>
-            <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. Susbcribe to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, read the <a href="/archive.html">archive</a> or receive emails at <input type="text" value="" name="email" />    <input type="submit" value="Submit"/>
+        <script>
+        function subscribe() {
+            try {
+                var intent = new WebKitIntent("http://webintents.org/subscribe", "application/atom+xml", "http://blog.superfeedr.com/atom.xml");
+                var onSuccess = function(data) {
+                    // Successful sharing
+                };
+                var onError = function(data) { 
+                    // User canceled sharing
+                };
+                window.navigator.webkitStartActivity(intent, onSuccess, onError);
+            }
+            catch(ReferenceError) {
+                window.alert("Dang, your browser doesn't seem to support Webintents yet, switch to Chrome! :(")
+            }
+        }
+        </script>
+        
+            <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. </p>
+            
+            <p><button onclick="subscribe();">Subscribe</button> to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, or read the <a href="/archive.html">archive</a>.
             </p>
-        </form>
-
-        <div id="facebook_div">
-            <script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script type="text/javascript">FB.init("dfb41a1fd39d0fdac38081c0dd771c32");</script><fb:fan profile_id="205234549391" stream="" connections="" width="300"></fb:fan><div style="font-size:8px; padding-left:10px"><a href="http://www.facebook.com/pages/Superfeedr/205234549391">Superfeedr on Facebook</a> </div>
-        </div>
-
 
 
         <div id="dsq-recentcomments" class="dsq-widget"><h2 class="dsq-widget-title">Recent Comments</h2><script type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/recent_comments_widget.js?num_items=5&avatar_size=32"></script></div><a href="http://disqus.com">Powered by Disqus</a>
