--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,30 +48,11 @@
 
 	<div id="content_right">
         <h2>Superfeedr speaking</h2>
-<script>
-      function subtomeSubscribe() {
-        var proto = 'https'
-        if (window.location.protocol != "https:")
-          proto = 'http'
 
-        var s = document.createElement('iframe');
-        var url = window.location.toString();
-        s.setAttribute('style', 'position: absolute; top: 0px; left: 0px; width:100%; height: 100%; border:0px;');
-        s.setAttribute('src', proto + '://www.subtome.com/subscribe.html?resource=' + window.location.toString());
-        var loaded = false;
-        s.onload = function() {
-          if(loaded) {
-            document.getElementsByTagName('body')[0].removeChild(s);
-          }
-          loaded = true;
-        }
-        document.getElementsByTagName('body')[0].appendChild(s);
-      }
-  </script>
 
             <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. </p>
 
-            <p><input type="button" onclick="subtomeSubscribe();" value="Subscribe"> to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, or read the <a href="/archive.html">archive</a>.
+            <p><input type="button" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()" value="Subscribe"> to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, or read the <a href="/archive.html">archive</a>.
             </p>
 
 
