adding post on track stemming

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,122 +1,99 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Superfeedr : {{ page.title }} </title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <title>Superfeedr : {{ page.title }} </title>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
-    <!-- Stylesheets -->
-    <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://superfeedr.com/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://superfeedr.com/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-    <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
+  <!-- Stylesheets -->
+  <link href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="http://superfeedr.com/stylesheets/superfeedr.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="http://superfeedr.com/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="http://superfeedr.com/stylesheets/shjs/sh_nedit.min.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="http://superfeedr.com/stylesheets/thickbox.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css" />
+  <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/atom.xml">
 
     <!--[if lt IE 8]>
 		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js">IE7_PNG_SUFFIX=".png";</script>
 		<link rel="stylesheet" type="text/css" href="css/ie.css" />
-	<![endif]-->
+   <![endif]-->
 	<!--[if IE 6]>
 		<link rel="stylesheet" type="text/css" href="css/ie6.css" />
-	<![endif]-->
-</head>
+   <![endif]-->
+ </head>
 
-<body>
-	<div id="bg">
-	<div id="wrapper">
-		<div id="logo">
-			<a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
-		</div>
-		<ul id="navigation">
-		    <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li>
-		    <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li>
-		    <li><a href="http://superfeedr.com/documentation" alt="RTFM">Documentation</a></li>
-		    <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li>
-		</ul>
-		<div class="clear"></div>
-	<div id="main_bg">
-        <div id="main_top">
-			<h1>{{ page.title }}</h1>
-		</div> <!--main_top-->
+ <body class="blog">
+   <div id="bg">
+     <div id="wrapper">
+      <div id="logo">
+       <a href="http://superfeedr.com" class="home"><img alt="Superfeedr" src="http://superfeedr.com/images/superfeedr_complete.png" /></a>
+     </div>
+     <ul id="navigation">
+      <li><a href="http://superfeedr.com/publisher" alt="Got feeds? Push them in realtime">Publishers</a></li>
+      <li><a href="http://superfeedr.com/subscriber" alt="Want data? We have it for you">Subscribers</a></li>
+      <li><a href="http://superfeedr.com/documentation" alt="RTFM">Documentation</a></li>
+      <li><a href="http://superfeedr.com/about" alt="All you wanted to know. Almost">About</a></li>
+    </ul>
+    <div class="clear"></div>
+    <div id="main_bg">
+      <div id="main_top">
+       <h1>{{ page.title }}</h1>
+     </div> <!--main_top-->
 
-    		<div id="content">
-<div id="content_left">
-    {{ content }}
-	</div> <!--content_left-->
+     <div id="content">
+        {{ content }}
+    </div> <!--content-->
 
-	<div id="content_right">
-        <h2>Superfeedr speaking</h2>
-
-
-            <p style="line-height:200%">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. </p>
-
-            <p><input type="button" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()" value="Subscribe"> to our <a href="http://blog.superfeedr.com/atom.xml">Atom Feed</a>, <a href="http://twitter.com/superfeedr">follow us on Twitter</a>, or read the <a href="/archive.html">archive</a>.
-            </p>
-
-
-        <div id="dsq-recentcomments" class="dsq-widget"><h2 class="dsq-widget-title">Recent Comments</h2><script type="text/javascript" src="http://disqus.com/forums/superfeedr-thoughts/recent_comments_widget.js?num_items=5&avatar_size=32"></script></div><a href="http://disqus.com">Powered by Disqus</a>
-
-        <div id="twitter_div">
-            <h2>Twitter Updates</h2>
-            <ul id="twitter_update_list"></ul>
-            <a href="http://twitter.com/superfeedr" id="twitter-link" style="display:block;text-align:right;">follow me on Twitter</a>
-        </div>
+    <div id="footer">
+      <ul id="footer_navigation">
+        <li><a href="http://superfeedr.com/documentation">Docs</a></li>
+        <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
+        <li><a href="http://superfeedr.com/cost">Pricing</a></li>
+        <li><a href="http://superfeedr.com/terms">Terms</a></li>
+        <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
+        <li><a href="http://github.com/superfeedr">Code</a></li>
+        <li><a href="http://blog.superfeedr.com">Blog</a></li>
+        <li><a href="http://superfeedr.com/about">About</a></li>
+      </ul>
+    </div>
+    <div id="log" style="" ></div>
+  </div> <!--main_bg-->
+</div><!--wrapper-->
+</div><!--bg-->
+<!-- UserVoice -->
+<div style="display:none" id="profile_links">
+ <a href="http://ouvre-boite.com" rel="me" target="_blank">Ouvre-Boite</a>
+ <a href="http://www.google.com/profiles/julien.genestoux" rel="me" target="_blank">Google Buzz</a>
+ <a href="http://stackoverflow.com/users/73987/julien-genestoux" rel="me" target="_blank">Stack Overflow</a>
+ <a href="http://github.com/julien51">Github</a>
+ <a href="http://friendfeed.com/julien">Friendfeed</a>
+ <a href="http://cliqset.com/julien">Cliqset</a>
 </div>
+<script type="text/javascript">
+var uservoiceOptions = {
+  /* required */
+  key: 'superfeedr',
+  host: 'superfeedr.uservoice.com',
+  forum: '17481',
+  showTab: true,
+  /* optional */
+  alignment: 'left',
+  background_color:'#f00',
+  text_color: 'white',
+  hover_color: '#06C',
+  lang: 'en'
+};
 
-            <div class="clear"></div>
-            </div> <!--content-->
-
-	    <div id="footer">
-            <ul id="footer_navigation">
-                <li><a href="http://superfeedr.com/documentation">Docs</a></li>
-                <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
-                <li><a href="http://superfeedr.com/cost">Pricing</a></li>
-                <li><a href="http://superfeedr.com/terms">Terms</a></li>
-                <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
-                <li><a href="http://github.com/superfeedr">Code</a></li>
-                <li><a href="http://blog.superfeedr.com">Blog</a></li>
-                <li><a href="http://superfeedr.com/about">About</a></li>
-            </ul>
-		</div>
-		<div id="log" style="" ></div>
-	</div> <!--main_bg-->
-	</div><!--wrapper-->
-	</div><!--bg-->
-	<!-- UserVoice -->
-    <div style="display:none" id="profile_links">
-	    <a href="http://ouvre-boite.com" rel="me" target="_blank">Ouvre-Boite</a>
-	    <a href="http://www.google.com/profiles/julien.genestoux" rel="me" target="_blank">Google Buzz</a>
-	    <a href="http://stackoverflow.com/users/73987/julien-genestoux" rel="me" target="_blank">Stack Overflow</a>
-	    <a href="http://github.com/julien51">Github</a>
-	    <a href="http://friendfeed.com/julien">Friendfeed</a>
-	    <a href="http://cliqset.com/julien">Cliqset</a>
-	</div>
-    <script type="text/javascript">
-    var uservoiceOptions = {
-      /* required */
-      key: 'superfeedr',
-      host: 'superfeedr.uservoice.com',
-      forum: '17481',
-      showTab: true,
-      /* optional */
-      alignment: 'left',
-      background_color:'#f00',
-      text_color: 'white',
-      hover_color: '#06C',
-      lang: 'en'
-    };
-
-    function _loadUserVoice() {
-      var s = document.createElement('script');
-      s.setAttribute('type', 'text/javascript');
-      s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");
-      document.getElementsByTagName('head')[0].appendChild(s);
-    }
-    _loadSuper = window.onload;
-    window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); };
-    </script>
-    <!-- UserVoice (end) -->
+function _loadUserVoice() {
+  var s = document.createElement('script');
+  s.setAttribute('type', 'text/javascript');
+  s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");
+  document.getElementsByTagName('head')[0].appendChild(s);
+}
+_loadSuper = window.onload;
+window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); };
+</script>
+<!-- UserVoice (end) -->
 </body>
 </html>
