--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,14 @@ layout: default
 {{ content }}
 </div>
 
+<blockquote>
+  <p>Liked this post? <input type="button" onclick="(function(){var z=document.createElement('script');z.src='http://www.subtome.com/load.js';document.body.appendChild(z);})()" value="Subscribe!" /> to get more or read the <a href="/archive.html">archive</a>.</p>
+</blockquote>
+
+
 <small class="meta">{% for t in page.categories %}
   <a href='http://www.google.com/search?q={{ t | escape }}+site:blog.superfeedr.com'>{{ t }}</a>{% if forloop.last == false %}, {% endif %}
-  {% endfor %} 
+  {% endfor %}
 </small>
 
 <div id="comments">
