--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
         <li><a href="http://superfeedr.com/cost">Pricing</a></li>
         <li><a href="http://superfeedr.com/terms">Terms</a></li>
-        <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
+        <li><a href="https://github.com/superfeedr/documentation/issues">Support</a></li>
         <li><a href="http://github.com/superfeedr">Code</a></li>
         <li><a href="http://blog.superfeedr.com">Blog</a></li>
         <li><a href="http://superfeedr.com/about">About</a></li>
