--- a/_layouts/one_column.html
+++ b/_layouts/one_column.html
@@ -42,14 +42,11 @@
 
     <div id="footer">
       <ul id="footer_navigation">
-        <li><a href="http://superfeedr.com/documentation">Docs</a></li>
-        <li><a href="http://blog.superfeedr.com/frequently-asked-questions.html">Faq</a></li>
-        <li><a href="http://superfeedr.com/cost">Pricing</a></li>
-        <li><a href="http://superfeedr.com/terms">Terms</a></li>
-        <li><a href="http://groups.google.com/group/superfeedr">Community</a></li>
-        <li><a href="http://github.com/superfeedr">Code</a></li>
+        <li><a href="https://superfeedr.com/documentation">Docs</a></li>
+        <li><a href="https://github.com/superfeedr/documentation/issues">Support</a></li>
+        <li><a href="https://superfeedr.com/cost">Pricing</a></li>
+        <li><a href="https://superfeedr.com/terms">Terms</a></li>
         <li><a href="http://blog.superfeedr.com">Blog</a></li>
-        <li><a href="http://superfeedr.com/about">About</a></li>
       </ul>
 
     </div>
